<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/only_user_message_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/message_time"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/only_user_message_timeline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email|map"
            android:text="@string/base_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/fun"
            android:src="@drawable/fun" />

        <TextView
            android:id="@+id/only_user_fun_text_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/good"
            android:src="@drawable/good" />

        <TextView
            android:id="@+id/only_user_good_text_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/memo"
            android:src="@drawable/memo" />

        <TextView
            android:id="@+id/only_user_memo_text_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/usefull"
            android:src="@drawable/usefull" />

        <TextView
            android:id="@+id/only_user_usefull_text_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>