<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="7dp" >

            <LinearLayout
                android:id="@+id/flick_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ProgressBar
                    android:id="@+id/left_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:rotation="180" />

                <ProgressBar
                    android:id="@+id/right_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/base_progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/ViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <android.support.v4.view.PagerTabStrip
                        android:id="@+id/PagerTabStrip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp" />
                </android.support.v4.view.ViewPager>

                <LinearLayout
                    android:id="@+id/reply_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/global_reply_button"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/frame_border"
                        android:contentDescription="@string/reply"
                        android:src="@drawable/global_reply" />

                    <ImageView
                        android:id="@+id/private_reply_button"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/frame_border"
                        android:contentDescription="@string/reply"
                        android:src="@drawable/private_reply" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/title_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/trans_black"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/title_icon" />
            </LinearLayout>

            <ListView
                android:id="@+id/detail_message_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" >
            </ListView>

            <LinearLayout
                android:id="@+id/detail_message_list_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/trans_derk_gray"
                android:gravity="center"
                android:visibility="gone" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secret_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/secret_user_avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:contentDescription="@string/user_icon"
                        android:src="@drawable/no_image" />

                    <TextView
                        android:id="@+id/secret_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textAppearance="?android:attr/textAppearanceLarge" >
                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <FrameLayout
                            android:id="@+id/secret_fun"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/fun"
                                android:src="@drawable/fun"
                                android:textDirection="@string/zero" />

                            <TextView
                                android:id="@+id/secret_fun_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|right"
                                android:layout_marginBottom="3dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/zero"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@drawable/white" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/secret_good"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/good"
                                android:src="@drawable/good" />

                            <TextView
                                android:id="@+id/secret_good_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|right"
                                android:layout_marginBottom="3dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/zero"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@drawable/white" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/secret_memo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/memo"
                                android:src="@drawable/memo" />

                            <TextView
                                android:id="@+id/secret_memo_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|right"
                                android:layout_marginBottom="3dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/zero"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@drawable/white" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/secret_usefull"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/usefull"
                                android:src="@drawable/usefull" />

                            <TextView
                                android:id="@+id/secret_usefull_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|right"
                                android:layout_marginBottom="3dp"
                                android:layout_marginRight="5dp"
                                android:text="@string/zero"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@drawable/white" />
                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/secret_message_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/message_time"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/secret_message_timeline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/base_message"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_gravity="left"
        android:background="#333"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/SendMessageEditText"
            android:layout_width="265dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/global_message"
            android:inputType="textMultiLine" >
        </EditText>

        <LinearLayout
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top" >

                <ImageButton
                    android:id="@+id/AddButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/reply"
                    android:src="@drawable/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom" >

                <Button
                    android:id="@+id/SubmitButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_drawer"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_gravity="right"
        android:background="#e67e22"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/SendPrivateToUserEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="top"
                android:hint="@string/to_users"
                android:inputType="text" >
            </EditText>

            <EditText
                android:id="@+id/SendPrivateMessageEditText"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/private_message"
                android:inputType="textMultiLine" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top" >

                <ImageButton
                    android:id="@+id/PrivateAddButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/reply"
                    android:src="@drawable/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom" >

                <Button
                    android:id="@+id/SubmitPrivateButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>